yamls/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rick-morty-service
spec:
  selector:
    app: rick-morty
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
      nodePort: 30080
