yamls/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rick-morty-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: rick-morty.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rick-morty-service
                port:
                  number: 80
